--- a/templates/game_SPlay.html
+++ b/templates/game_SPlay.html
@@ -62,7 +62,7 @@
 
                     <div class="video-container" style="width: 45%; verticle-align: top; float:right;">
                         <video style="width: 100%; height: 500px; background-color: darkred;" controls autoplay>
-                            <source src="/static/Takestock_Intro.mp4" type="video/mp4">
+                            <source src="/static/Takestock_SinglePlay.mp4" type="video/mp4">
                             <source src="movie.ogg" type="video/ogg">
                             Your browser does not support the video tag.
                         </video>
