Fix Setup Issues
Setup route and database errors fixed.

--- a/templates/gameDash.html
+++ b/templates/gameDash.html
@@ -69,28 +69,28 @@
 			<tr><td>
 			<div class="form-group">
 				{{render_field(form.player_count, class_="form-control")}}
-			</div></td>><td>
+			</div></td><td>
 			<div class="form-group">
 				{{render_field(form.status, class_="form-control")}}
 			</div>
-			</td>></tr>
+			</td></tr>
 			<tr><td>
 			<div class="form-group">
 				{{render_field(form.start_date, class_="form-control")}}
-			</div></td>><td>
+			</div></td><td>
 			<div class="form-group">
 				{{render_field(form.game_ID, class_="form-control")}}
 			</div>
-			</td>></tr>
+			</td></tr>
 			<tr><td>
 			<div class="form-group">
 				{{render_field(form.population, class_="form-control")}}
-			</div></td>><td>
+			</div></td><td>
 			<div class="form-group">
-				{{render_field(form.pop_chg, class_="form-control")}}
+				{{render_field(form.population_chg, class_="form-control")}}
 			</div>
-			</td>></tr>
-		</table>>
+			</td></tr>
+		</table>
 	<table>
 		<tr>
 
@@ -122,6 +122,6 @@
 				<button type="submit" class="btn btn-primary">Submit</button>
 	</form>
 		</div>
-
+	</div>
 </div>
 {% endblock %}
