--- a/templates/gameSetup.html
+++ b/templates/gameSetup.html
@@ -73,7 +73,7 @@
 	</div>
 		<table  class="table table-borderless">
 			<tr><td>
-				<button class="nav-item"><a class="btn btn-primary" href="{{url_for('game_setup')}}">Setup</a></button>
+				<button class="nav-item"><a class="btn btn-primary" href="{{url_for('game_setup', method='POST')}}">Setup</a></button>
 			</td><td>
 				<button class="nav-item"><a class="btn btn-primary" href="{{url_for('ts_sub1_bp.game_action')}}">Start Game</a></button>
 				</td>
