--- a/templates/game_TPlay.html
+++ b/templates/game_TPlay.html
@@ -8,7 +8,7 @@
             <table style="width: 100%; background-color: yellow;">
                 <tr>
                 <td style="border-style: none; width: 25px; padding:0; margin-right:1px;">
-                    <a class="button" href="url_for('ts_sub1_bp.game_TBuy')">Buy</a>
+                    <a class="button" href="{{url_for('ts_sub1_bp.game_TPBuy')}}">Buy</a>
                 </td>
                 <td style="border-style: none; width: 25px; padding:0; margin-right:1px;">
                     <a class="button" href="{{url_for('ts_sub1_bp.game_pass')}}">Decline</a>
